style.css
/* ... */
.action--btn:hover {
  opacity: 1;
}

.top-related-actions li {
  list-style: none;
  float: left;
  padding: 11px 18px 13px 18px;
  cursor: pointer;
}

.is-hidden {
  display: none
}

.toggleTriggerBox {
  position: inherit!important
}

.toggleTriggerBox .dropdown-menu {
  right: 0;
  left: auto;
}

.highcharts-root {
  width: 100%;
  height: 100%;
}

.no-border {
  border: none
}

.dropdown-toggle {
  color: #000;
  cursor: pointer;
  padding-top: 10px;
}

.dropdown-menu.open {
  display: block!important;
  z-index: 9999;
}

.selected-report-options {
  position: relative;
  z-index: 999;
}

.loader,
.loader:before,
.loader:after {
  border-radius: 50%;
  width: 2.5em;
  height: 2.5em;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: load7 1.8s infinite ease-in-out;
  animation: load7 1.8s infinite ease-in-out;
}

.loader {
  color: #000040;
  font-size: 10px;
  margin: 80px auto;
  position: relative;
  text-indent: -9999em;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}

.loader:before,
.loader:after {
  content: '';
  position: absolute;
  top: 0;
}

.loader:before {
  left: -3.5em;
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}

.loader:after {
  left: 3.5em;
}

@-webkit-keyframes load7 {
  0%,
  80%,
  100% {
    box-shadow: 0 2.5em 0 -1.3em;
  }
  40% {
    box-shadow: 0 2.5em 0 0;
  }
}

@keyframes load7 {
  0%,
  80%,
  100% {
    box-shadow: 0 2.5em 0 -1.3em;
  }
  40% {
    box-shadow: 0 2.5em 0 0;
  }
}

.report--design .highcharts {
  position: inherit!important;
  width: calc(100% - 60px) !important;
  margin-bottom: 30px;
}
.report--design {
  margin-bottom: 60px;
}

.highcharts {
  position: absolute;
  width: 100%;
  height: 85%;
  top: 15%;
}

.vue-grid-layout>div {
  background: #fff;
  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
  border: none !important;
  position: relative
}

.vdp-datepicker input {
  background: #fff;
  padding: .6em 1em;
  border: 0;
  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.15);
  margin-top: 6px;
  border-radius: 3px;
  color: rgba(0, 0, 0, 0.7);
  cursor: pointer;
  font-size: 13px;
  width: 100%;
}

.vdp-datepicker::after {
  content: '';
  display: block;
  width: 5px;
  height: 5px;
  position: absolute;
  right: 10px;
  bottom: 10px;
  border: 5px solid transparent;
  border-top-color: #5b64fc
}

.vue-grid-item {
  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12)!important;
  border-radius: 2px;
}

.vdp-datepicker__calendar {
  right: 0;
  left: auto
}

.report--design .vdp-datepicker__calendar {
  left: 0!important;
  right: auto!important;
}

.report--design .toggleTriggerBox {
  display: none
}

.main--input {
  background: #fff;
  padding: .6em 1em;
  border: 0;
  -webkit-box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.15);
  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.15);
  margin-top: 6px;
  border-radius: 3px;
  color: rgba(0, 0, 0, 0.7);
  cursor: pointer;
  font-size: 13px;
  width: 100%;
}

.btn--add {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  background: #432fc2;
  color: #fff;
  -webkit-box-shadow: 2px 2px 10px 0 rgba(108, 6, 225, 0.4);
  box-shadow: 2px 2px 10px 0 rgba(108, 6, 225, 0.4);
  min-height: 40px;
  font-size: 15px;
  transition: all 300ms;
  z-index: 99999;
  border: 0;
  border-radius: 3px;
  padding: 0 10px;
  min-width: 40px;
  text-align: center;
  padding-right: 0;
  padding-left: 0;
  position: relative;
  z-index: 9999
}

.btn--add i {
  margin-right: 0!important;
}

.btn--add.is-fixed {
  position: fixed;
  right: 30px;
  bottom: 30px;
  border-radius: 100px;
  padding: 0 20px;
}

.btn--add:hover {
  color: #fff;
  -webkit-box-shadow: 0 2px 20px 0 rgba(108, 6, 225, 0.5);
  box-shadow: 0 2px 20px 0 rgba(108, 6, 225, 0.5);
}

.btn--add i {
  font-size: 10px!important;
  margin-right: 5px;
}

* {
  outline: 0!important
}

.icon-minus:before {
  content: "\e900";
}

.icon-search:before {
  content: "\e901";
}

.icon-settings:before {
  content: "\e902";
}

.icon-hamburger:before {
  content: "\e903";
}

.icon-tri-left:before {
  content: "\e904";
}

.icon-arrow-right:before {
  content: "\e905";
}

.icon-plus:before {
  content: "\e906";
}

.icon-more:before {
  content: "\e907";
}

.icon-query-hide:before {
  content: "\e908";
}

.icon-query:before {
  content: "\e909";
}

.icon-refresh:before {
  content: "\e90a";
}

.icon-export:before {
  content: "\e90b";
}

.icon-arrow-down:before {
  content: "\e90c";
}


/*Scrollbar*/

::-webkit-scrollbar {
  width: 7px;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
}

::-webkit-scrollbar-thumb {
  background-color: rgba(111, 111, 111, 0.5);
  outline: 1px solid slategrey;
  border-radius: 6px;
}

* {
  margin: 0;
  padding: 0;
}

*,
*:after,
*::before {
  box-sizing: border-box;
}

body {
  /* height: 100vh; */
  overflow: hidden;
  background: #f1f1f1
}

a,
a:hover,
a:active,
a:focus {
  text-decoration: none;
}

ul,
ol {
  list-style: none;
  margin: 0;
  padding: 0;
}

.flex {
  display: flex;
}

.flex-left {
  justify-content: flex-start;
}

.flex-center {
  justify-content: center;
}

.flex-right {
  justify-content: flex-end;
}

.flex-space-between {
  justify-content: space-between;
}

.flex-top {
  align-items: flex-start;
}

.flex-middle {
  align-items: center;
}

.flex-bottom {
  align-items: flex-end;
}


.no-padding {
  padding: 0
}

.no-margin {
  margin: 0
}

.align-right {
  text-align: right
}

.align-left {
  text-align: left
}

.nav-panel .lists-of-nodes {
  color: #fff !important;
  border-radius: 2px
}

.nav-panel .lists-of-nodes span {
  margin-left: 10px
}

.dropdown-menu li:hover,
.toolbox-element-value:hover {
  background: #000
}

.report-element-header .dropdown-menu,
.reports-area .dropdown-menu {
  margin-left: -155px !important;
}


/*GORKEM*/

.tab-content {
  width: 100%;
}
/* ... */

